@startuml
Entity City{
    name: string
    --
    city_id: int
    country_code: string
    country: string
    region: string
    longitude: float
    latitude: float 
    lgbtq: int
    medical: int
    overall: int
    physical: int
    political: int
    theft: int
    women: int
}

Entity Covid{
    country_code: string
    --
    country: string
    new_cases: int
    total_cases: int
    new_deaths: int
    total_deaths: int
    date: string
}

Entity Airport{
    city_name: string
    --
    iata_code: string
    airport_name: string
    country_code: string
    country_name: string
    time_offset: string
    longitude: float
    latitude: float
}

Airport }o--|| Covid
Airport }o--|| City
City }o--|| Covid

@enduml